Add React pages Homepage.js, About.js, Error404.js, Lodging.js. Add routes in App.js. Components Header and Footer are injected for all pages and Homepage.js is complete.

--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
       rel="stylesheet"
     />
     <!-- manifest.json -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-kasa.svg" />
     <title>Kasa</title>
   </head>
   <body>
