Correction wrong ulr for icon in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- manifest.json -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-kasa.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo-kasa.svg" />
     <title>Kasa</title>
   </head>
   <body>
